--- a/app/src/main/res/drawable/divider_dotted.xml
+++ b/app/src/main/res/drawable/divider_dotted.xml
@@ -3,7 +3,7 @@
     android:shape="line">
 
   <stroke
-      android:color="@color/color_divider"
+      android:color="@color/black_800"
       android:dashGap="5px"
       android:dashWidth="10px"
       android:width="1dp"/>
