--- a/app/src/main/res/drawable/viewpager_selected_dot.xml
+++ b/app/src/main/res/drawable/viewpager_selected_dot.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="5dp"
             android:useLevel="false">
-            <solid android:color="@color/teal_200"/>
+            <solid android:color="@color/white_50"/>
         </shape>
     </item>
 </layer-list>
