--- a/app/src/main/res/layout/activity_add_i_keeper.xml
+++ b/app/src/main/res/layout/activity_add_i_keeper.xml
@@ -6,18 +6,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".AddIKeeperActivity">
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/black_800"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:menu="@menu/ikeeper_menu"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Title"
+        android:layout_margin="8dp"
         android:id="@+id/text_Title"
         android:inputType="text"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Description"
+        android:layout_margin="8dp"
         android:id="@+id/text_desc"
         android:inputType="textMultiLine"/>
     <TextView
