--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -19,7 +19,7 @@
         android:gravity="center"
         android:text="Code"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/white_50"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
