--- a/app/src/main/res/layout/ikeeper_item.xml
+++ b/app/src/main/res/layout/ikeeper_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
-    android:layout_marginLeft="8dp"
+    android:layout_marginLeft="15dp"
     android:elevation="0dp"
     android:layout_marginRight="8dp">
     <RelativeLayout
@@ -17,8 +17,10 @@
             android:text="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:layout_alignParentRight="true"
+            android:layout_margin="5dp"
             android:textStyle="bold"/>
         <TextView
+            android:layout_margin="5dp"
             android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,14 +31,27 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:maxLines="1"
             android:ellipsize="end"/>
+
         <TextView
-            android:layout_marginTop="10dp"
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtTitle"
-            android:text="Description"
-            />
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/roboto_mono_thin"
+            android:text="Description" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/description"
+            android:text="Date"
+            android:layout_alignParentRight="true"/>
+
     </RelativeLayout>
 
 </com.google.android.material.card.MaterialCardView>
